--- a/.github/workflows/testCSV.yaml
+++ b/.github/workflows/testCSV.yaml
@@ -2,7 +2,8 @@ name: Test Hello World with Unique CSV
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # Runs every minute
+    - cron: '*/5 * * * *'  # Runs every 5 minutes (you can adjust this as needed)
+  workflow_dispatch:  # Allows manual run
 
 jobs:
   hello_world_job:
