--- a/.github/workflows/testCSV.yaml
+++ b/.github/workflows/testCSV.yaml
@@ -2,7 +2,7 @@ name: Test Hello World with Unique CSV
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes (you can adjust this as needed)
+    - cron: '*/5 * * * *'  # Runs every 5 minutes (adjustable as needed)
   workflow_dispatch:  # Allows manual run
 
 jobs:
@@ -11,19 +11,19 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4  # Updated to the latest version
 
       - name: Display Hello World and Create CSV
         run: |
-          # Define a unique filename using date and time
-          filename="hello_world_log_$(date +'%Y%m%d_%H%M%S').csv"
+          # Define a unique filename with the desired format
+          filename="Hello_World_Workflow_Test_$(date +'%Y%m%d_%H%M%S').csv"
 
           # Create a new CSV file with the message, date, and time
           echo "Message,Date and Time" > $filename
           echo "Hello, world!,$(date)" >> $filename
 
       - name: Upload CSV log
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4  # Updated to the latest version
         with:
           name: hello_world_log_${{ github.run_id }}
-          path: hello_world_log_*.csv
+          path: ${{ filename }}  # Reference the dynamically created filename
