--- a/.github/workflows/testCSV.yaml
+++ b/.github/workflows/testCSV.yaml
@@ -1,4 +1,4 @@
-name: Test Hello World with Unique CSV
+name: Test Hello World with Unique CSV in Pacific Time
 
 on:
   schedule:
@@ -15,12 +15,12 @@ jobs:
 
       - name: Display Hello World and Create CSV
         run: |
-          # Define a unique filename with the desired format
-          export filename="Hello_World_Workflow_Test_$(date +'%Y%m%d_%H%M%S').csv"
+          # Define a unique filename with the desired format in Pacific Time
+          export filename="Hello_World_Workflow_Test_$(TZ='America/Los_Angeles' date +'%Y%m%d_%H%M%S').csv"
           
           # Create a new CSV file with the message, date, and time
           echo "Message,Date and Time" > $filename
-          echo "Hello, world!,$(date)" >> $filename
+          echo "Hello, world!,$(TZ='America/Los_Angeles' date)" >> $filename
           
           # Save filename to environment for use in the next step
           echo "filename=$filename" >> $GITHUB_ENV
