--- a/.github/workflows/testCSV.yaml
+++ b/.github/workflows/testCSV.yaml
@@ -1,9 +1,9 @@
 name: Test Hello World with Unique CSV in Pacific Time
 
 on:
-  schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes (adjustable as needed)
-  workflow_dispatch:  # Allows manual run
+  # schedule:
+  #   - cron: '*/5 * * * *'  # This line is commented out to disable automatic runs
+  workflow_dispatch:  # Allows manual run only
 
 jobs:
   hello_world_job:
@@ -11,22 +11,17 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4  # Updated to the latest version
+        uses: actions/checkout@v4
 
       - name: Display Hello World and Create CSV
         run: |
-          # Define a unique filename with the desired format in Pacific Time
           export filename="Hello_World_Workflow_Test_$(TZ='America/Los_Angeles' date +'%Y%m%d_%H%M%S').csv"
-          
-          # Create a new CSV file with the message, date, and time
           echo "Message,Date and Time" > $filename
           echo "Hello, world!,$(TZ='America/Los_Angeles' date)" >> $filename
-          
-          # Save filename to environment for use in the next step
           echo "filename=$filename" >> $GITHUB_ENV
 
       - name: Upload CSV log
-        uses: actions/upload-artifact@v4  # Updated to the latest version
+        uses: actions/upload-artifact@v4
         with:
           name: hello_world_log_${{ github.run_id }}
-          path: ${{ env.filename }}  # Use the environment variable for the filename
+          path: ${{ env.filename }}
